syntax = "proto3";

option csharp_namespace = "AcceptsCoin.Services.DirectoryServer.Protos";

package business;


service BusinessAppService{
    rpc GetAll (BusinessQueryFilter) returns (BusinessListGm);
    rpc GetByPartnerId (BusinessPartnerIdQueryFilter) returns (BusinessListGm);
    rpc GetByTokenId (BusinessTokenIdQueryFilter) returns (BusinessListGm);
    rpc GetByTagId (BusinessTagIdQueryFilter) returns (BusinessListGm);
    rpc GetByCategoryId (BusinessCategoryIdQueryFilter) returns (BusinessListGm);
    rpc GetFrontBusinessByLocation (BusinessFrontLocationQueryFilter) returns (BusinessListFrontGm);
    rpc GetFrontBusinessList (BusinessFrontQueryFilter) returns (BusinessListFrontGm);
    rpc GetFrontBusinessListByTagId (BusinessFrontTagIdQueryFilter) returns (BusinessListFrontGm);
    rpc GetById (BusinessIdFilter) returns (BusinessGm);
    rpc GetFrontById (BusinessIdFilter) returns (SingleBusinessFrontGm);
    rpc GetByUserId (BusinessQueryFilter) returns (BusinessListGm);
    rpc Post (CreateBusinessGm) returns (BusinessGm);
    rpc Put (BusinessGm) returns (BusinessGm);
    rpc Delete (BusinessIdFilter) returns (Empty);
    rpc SoftDelete (BusinessIdFilter) returns (Empty);
    rpc SoftDeleteCollection (BusinessDeleteCollectionGm) returns (Empty);
    rpc UpdatePoint (BusinessQueryFilter) returns (Empty);
    rpc SaveBusinessToken (BusinessTokenGm) returns (Empty);
    rpc SaveBusinessTokenCollection (BusinessTokenListGm) returns (Empty);
    rpc SaveBusinessTag (BusinessTagGm) returns (Empty);
    rpc GetBusinessTag (BusinessIdFilter) returns (BusinessTagListGm);
    rpc GetBusinessToken (BusinessIdFilter) returns (BusinessTokenListGm);

}

message Empty{
}

message BusinessTokenGm{
    string businessId = 1;
    string tokenId = 2;
}


message BusinessTagGm{
    string businessId = 1;
    string tagId = 2;
}
message BusinessTagListGm{
    repeated BusinessTagGm businessTags =1;
}

message BusinessTokenListGm{
    repeated BusinessTokenGm businessTokens =1;
}

message BusinessFrontLocationQueryFilter {
 int32 pageId = 1;
 int32 pageSize = 2;
 double latitude = 3;
 double longitude = 4;
 string query= 5;
}
message BusinessIdFilter {
 string businessId = 1;
}
message BusinessDeleteCollectionGm {
 repeated BusinessIdFilter items = 1;
}
message BusinessQueryFilter {
 int32 pageId = 1;
 int32 pageSize = 2;
}

message BusinessCategoryIdQueryFilter {
 int32 pageId = 1;
 int32 pageSize = 2;
 string categoryId=3; 
}
message BusinessTokenIdQueryFilter {
 int32 pageId = 1;
 int32 pageSize = 2;
 string tokenId=3; 
}


message BusinessTagIdQueryFilter {
 int32 pageId = 1;
 int32 pageSize = 2;
 string tagId=3; 
}


message BusinessPartnerIdQueryFilter {
 int32 pageId = 1;
 int32 pageSize = 2;
 string partnerId=3; 
}
message BusinessFrontQueryFilter {
 int32 pageId = 1;
 int32 pageSize = 2;
}

message BusinessFrontTagIdQueryFilter {
 int32 pageId = 1;
 int32 pageSize = 2;
 string tagId=3;
}
message PaginationGm{
    int32 currentPage = 1;
    int32 itemCount = 2;
    int32 pageCount = 3;
}

message CreateBusinessGm {
    message TagGm{
        string tagId = 1;
    }
    message TokenGm{
        string tokenId = 1;
    }
    string Id = 1;
    string name = 2;
    string email = 3;
    string webSiteUrl = 4;
    string contactNumber = 5;
    optional string logo = 6;
    string owner = 7;
    string manager = 8;
    string twitter = 9;
    string faceBook = 10;
    string instagram = 11;
    bool verified = 12;
    double latitude = 13;
    double longitude = 14;
    string description = 15;
    string address = 16;
    string offeredServices = 17;
    string categoryId = 18;
    repeated TagGm tags = 19;
    repeated TokenGm tokens = 20;
}
message BusinessGm {
    string Id = 1;
    string name = 2;
    string email = 3;
    string webSiteUrl = 4;
    string contactNumber = 5;
    optional string logo = 6;
    string owner = 7;
    string manager = 8;
    string twitter = 9;
    string faceBook = 10;
    string instagram = 11;
    bool verified = 12;
    double latitude = 13;
    double longitude = 14;
    string description = 15;
    string address = 16;
    string offeredServices = 17;
    string categoryId = 18;
    repeated BusinessTokenFrontGm tokens = 19;
    optional string imageUrl = 20;


}
message BusinessListGm {
    repeated BusinessGm items = 1;
    PaginationGm pagination = 2;
}

message BusinessFrontGm {
    message BusinessTokenFrontGm {
    string Id = 1;
    string coin = 2;
    int32 totalCoin = 3;
    string img = 4;
    }
    string Id = 1;
    string name = 2;
    string locationName = 3;
    int32 rate = 4;
    int32 totalRate = 5;
    string description = 6;
    double latitude = 7;
    double longitude = 8;
    string icon = 9;
    string imageUrl = 10;
    repeated BusinessTokenFrontGm token = 11;
}
message BusinessListFrontGm {
    repeated BusinessFrontGm items = 1;
    int32 currentPage = 2;
    int32 itemCount = 3;
    int32 pageCount = 4;
}

message SingleBusinessFrontGm {
    string Id = 1;
    string name = 2;
    string locationName = 3;
    int32 rate = 4;
    int32 totalRate = 5;
    string description = 6;
    double latitude = 7;
    double longitude = 8;
    string icon = 9;
    string imageUrl = 10;
    repeated BusinessTokenFrontGm tokens = 11;
    repeated BusinessGalleryFrontGm images = 12;
    repeated BusinessTagFrontGm tags = 13;
    repeated BusinessReviewFrontGm reviews = 14;
    BusinessCategoryFrontGm category = 15;
    bool verified = 17;
    string offeredServices =18;
    string instagram = 19;
    string twitter = 20;
    string facebook = 21;
    string address = 22;
    string owner = 23;
    string contactNumbrt = 24;
    string manager = 25;
    string email = 26;
    string webSiteUrl = 27;
}
message BusinessGalleryFrontGm {
    string Id = 1;
    string name = 2;
    string extension = 3;
    string image = 4;
    string caption = 5;
}
message BusinessTokenFrontGm {
    string Id = 1;
    string coin = 2;
    int32 totalCoin = 3;
    string img = 4;
    }
    message BusinessTagFrontGm {
    string Id = 1;
    string title = 2;
    }
    message BusinessReviewFrontGm {
        message User {
        string Id = 1;
        string email = 2;
        string name=4;
        int32 rateCount=5;
        int32 reviewCount = 6;
        }
    string Id = 1;
    string comment = 2;
    int32 rate=4;
    string date = 5;
    User user = 6;
    }
    message BusinessCategoryFrontGm {
    string Id = 1;
    string title = 2;
    }
   